# ubl-refactor

./: .gitignore  ADDENDUM_CERTIFIED_RUNTIME.md  ARCHITECTURE.md  ARCHITECTURE_v2.md  CERTIFIED_RUNTIME.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSING.md  COMPATIBILITY.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  GOVERNANCE.md  Makefile  NOTICE  P0_GENESIS_POLICY.json  P1_POLICY_UPDATE.json  QUALITY_GATE.md  README.md  RFC_PROCESS.md  ROLLOUT_P0_TO_P1.md  SECURITY.md  START-HERE.md  SUPPORT.md  TASKLIST.md  TEST_STRATEGY.md  TRADEMARK_POLICY.md  UNC-1.md  VERSIONING.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  conformance.yml  notify-shells.yml  release-from-tag.yml  repro-matrix.yml
artifacts/readiness/: 2026-02-24_phase1_review.txt  2026-02-24_phase2_review.txt  2026-02-24_phase5_review.txt
crates/rb_vm/: Cargo.toml  README.md
crates/rb_vm/fixtures/examples/deny_age/: chip.asm  chip.tlv  expected.narrative.md  expected.rc.cid
crates/rb_vm/fixtures/laws/no_io/: README.md
crates/rb_vm/src/: canon.rs  lib.rs  types.rs
crates/rb_vm/src/providers/: sign_env.rs
crates/rb_vm/tests/: emit_rc_canonical.rs  laws.rs  num_opcodes.rs  prop_vm.rs  rho_contract_vectors.rs
crates/ubl_ai_nrf1/: Cargo.toml  README.md
crates/ubl_ai_nrf1/examples/: gen_golden.rs
crates/ubl_ai_nrf1/src/: chip_format.rs  lib.rs
crates/ubl_ai_nrf1/tests/: golden_vectors.rs  rho_vectors.rs
crates/ubl_canon/: Cargo.toml
crates/ubl_canon/src/: lib.rs
crates/ubl_chipstore/: Cargo.toml
crates/ubl_chipstore/src/: backends.rs  indexing.rs  lib.rs  query.rs
crates/ubl_chipstore/tests/: load_validation.rs
crates/ubl_cli/: Cargo.toml
crates/ubl_cli/src/: main.rs
crates/ubl_config/: Cargo.toml
crates/ubl_did/: Cargo.toml
crates/ubl_eventstore/: Cargo.toml
crates/ubl_eventstore/src/: lib.rs
crates/ubl_kms/: Cargo.toml
crates/ubl_kms/src/: lib.rs  pq_mldsa3.rs
crates/ubl_ledger/: Cargo.toml
crates/ubl_ledger/src/: lib.rs
crates/ubl_nrf/: Cargo.toml
crates/ubl_receipt/: Cargo.toml
crates/ubl_receipt/src/: lib.rs  pipeline_types.rs  unified.rs
crates/ubl_runtime/: Cargo.toml
crates/ubl_runtime/src/: advisory.rs  ai_passport.rs  audit_chip.rs  auth.rs  authorship.rs  capability.rs  circuit.rs  durable_store.rs  error_response.rs  event_bus.rs  genesis.rs  idempotency.rs  key_rotation.rs  knock.rs  ledger.rs  lib.rs  llm_observer.rs  manifest.rs  meta_chip.rs  outbox_dispatcher.rs  policy_bit.rs  policy_loader.rs  policy_lock.rs  rate_limit.rs  reasoning_bit.rs  rich_url.rs  runtime_cert.rs  silicon_chip.rs  transition_registry.rs  wasm_adapter.rs
crates/ubl_runtime/src/pipeline/: mod.rs  processing.rs  providers.rs  tests.rs  types.rs
crates/ubl_runtime/src/pipeline/stages/: check.rs  mod.rs  tests.rs  transition.rs  write_ahead.rs  write_finished.rs
crates/ubl_runtime/tests/: canon_guardrails.rs  knock_vector_matrix.rs
crates/ubl_types/: Cargo.toml
crates/ubl_unc1/: Cargo.toml
crates/ubl_unc1/src/: lib.rs
crates/ubl_vm/: Cargo.toml  README.md
docs/: INDEX.md  MAINTAINERS.md  START-HERE-LLM-FIRST.md  contributing.md  governance.md  index.md  key_rotation_plan.md
docs/adr/: 0001-DOC-GOVERNANCE.md  0003-SQLITE-DURABILITY-P0.md  README.md
docs/adrs/: ADR-0001-compat-shims.md  ADR-0002-config-driven-pipeline-and-secret-rotation.md  TEMPLATE.md
docs/canon/: CANON-REFERENCE.md  START-HERE-CANON.md
docs/changelog/: V0_4_0_RC1.md
docs/contributing/: testing.md
docs/migration/: UBL_CORE_EXTRACT_PLAN.md  UNC1_MIGRATION.md
docs/operations/: observability.md  rollout-automation.md  slo.md  stage-secret-rotation.md
docs/ops/: BOOTSTRAP_FINAL_TEXT.md  CHATGPT_CONNECTOR_ONBOARDING.md  CLOUDFLARE_EDGE_BASELINE.md  EPISODE_1_PROTOCOL.md  EPISODE_TEMPLATE.md  EVENT_HUB.md  INCIDENT_RUNBOOK.md  OFFLINE_RECEIPT_VERIFICATION.md  PRODUCTION_SLICE_CANARY.md  READINESS_EVIDENCE.md
docs/oss/: OPEN_SOURCE_SCOPE.md
docs/reference/: README.md  architecture.md  certified-runtime.md  config.md  unc-1.md
docs/release/: checklist.md  compatibility.md  process.md  rollout.md  versioning.md
docs/rfc/: TEMPLATE.md
docs/rfcs/: RFC-0001-gate-service-config-contract.md  TEMPLATE.md  process.md
docs/security/: CRYPTO_TRUST_MODEL.md  DOC_ATTESTATION.md  threat-model.md
kats/golden/: canon_v1.json
kats/rho_vectors/: 01_scalars.json  02_strings_basic.json  03_unicode_nfc.json  04_unicode_nfd.json  06_key_order_b.json  07_arrays.json  08_nested.json  09_floats_common.json  10_floats_edge.json  11_nulls_vs_absence.json  12_large_obj.json  13_str_weird.json
kats/silicon/: README.md  silicon_bit_always_allow.json  silicon_bit_context_equals.json  silicon_chip_payment_gate.json  silicon_circuit_sequential_all.json  (+2 more)
logline/: Cargo.toml
ops/: continuity_policy.md  forever_bootstrap.env  forever_bootstrap.env.example  forever_bootstrap.prod.env  postmortem_template.md  source_flow.env.example
schemas/: audit.advisory.request.v1.json  audit.ledger.snapshot.request.v1.json  audit.report.request.v1.json  ledger.segment.compact.v1.json  task.lifecycle.event.v1.json  unc-1.schema.json
scripts/: conformance_suite.sh  contract_suite.sh  detect_affected.sh  docs_attest.sh  export_ubl_core.sh  forever_bootstrap.sh  host_lockdown.sh  onboard_chatgpt_connector.sh  publish_ordered.sh  repo_sweep.sh  source_flow.sh  task_orchestrate.sh  ubl_ops.sh  wasm_conformance.sh  workzone_cleanup.sh
services/ubl_gate/: Cargo.toml
services/ubl_gate/src/: advisor.rs  audit.rs  chip.rs  console.rs  events.rs  lib.rs  llm.rs  main.rs  mcp.rs  metrics.rs  outbox.rs  receipt.rs  registry.rs  state.rs  templates.rs  utils.rs
services/ubl_gate/templates/: audit.html  audit_table.html  console.html  console_events.html  console_kpis.html  console_mock24h.html  console_receipt.html  llm_panel.html  registry.html  registry_kat_result.html  registry_table.html  registry_type.html
ui/: README.md  app.js  index.html  styles.css
(+197 files in other folders)
