[workspace]
members = [
  "crates/ubl_ai_nrf1",
  "crates/ubl_canon",
  "crates/ubl_eventstore",
  "crates/rb_vm",
  "crates/ubl_runtime",
  "crates/ubl_receipt",
  "crates/ubl_did",
  "crates/ubl_config",
  "crates/ubl_ledger",
  "crates/ubl_cli",
  "crates/ubl_chipstore",
  "crates/ubl_unc1",
  "crates/ubl_kms",
  "crates/ubl_types",
  "services/ubl_gate",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["UBL Contributors"]
repository = "https://github.com/LogLine-Foundation/UBL-CORE"

[workspace.dependencies]
# Internal crates
ubl_types = { path = "crates/ubl_types" }

# Core deps
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Crypto
blake3 = "1.5"
ed25519-dalek = "2.1"
ring = "0.17.12"

# Web
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
proptest = "1.4"

# Messaging
iggy = "0.6"

# Storage
sled = "0.34"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[package]
name = "ubl_core"
version = "0.1.0"
edition = "2021"

# This is just a workspace root
