[package]
name = "rb_vm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Deprecated shim for ubl_vm"
repository = "https://github.com/LogLine-Foundation/UBL-CORE"

[dependencies]
ubl_vm = { path = "../ubl_vm" }

[features]
default = []

[dev-dependencies]
proptest = "1.4"
serde_json = "1"
blake3 = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
