[package]
name = "ubl_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ublx"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

ubl_nrf = { path = "../ubl_nrf" }
ubl_runtime = { path = "../ubl_runtime" }
ubl_chipstore = { path = "../ubl_chipstore" }
ubl_receipt = { path = "../ubl_receipt" }
ubl_types = { workspace = true }
ubl_vm = { path = "../ubl_vm" }
ubl_kms = { path = "../ubl_kms" }
chrono = { version = "0.4", features = ["serde"] }
blake3 = { workspace = true }
hex = "0.4"
