[package]
name = "ubl_eventstore"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sled = { workspace = true }
hex = "0.4"
blake3 = { workspace = true }

[dev-dependencies]
tempfile = "3"
