[package]
name = "ubl_ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
cid = "0.11"
hex = "0.4"

[features]
default = ["ledger_mem"]
ledger_mem = []
ledger_ndjson = []
