[package]
name = "ubl_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = { workspace = true }
hex = "0.4"
rand = "0.8"
ring = { workspace = true }
base64 = "0.22"
flate2 = "1.0"

# Other crates in workspace
ubl_ai_nrf1 = { path = "../ubl_ai_nrf1" }
ubl_receipt = { path = "../ubl_receipt" }
ubl_chipstore = { path = "../ubl_chipstore" }
rb_vm = { path = "../rb_vm" }
ubl_unc1 = { path = "../ubl_unc1" }

# Property testing
proptest = { workspace = true, optional = true }
ubl_kms = { version = "0.1.0", path = "../ubl_kms" }
ubl_types = { path = "../ubl_types" }
ubl_canon = { path = "../ubl_canon" }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = { workspace = true }
wasmtime = "41.0.3"

[dev-dependencies]
tempfile = "3"
wat = "1.240"

[features]
default = []
property-tests = ["proptest"]
