[package]
name = "ubl_unc1"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UNC-1 numeric canon for UBL (int/dec/rat/bnd + units)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"

[features]
default = []

[dev-dependencies]
proptest = { workspace = true }
