[package]
name = "ubl_gate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ubl_gate"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

ubl_runtime = { path = "../../crates/ubl_runtime" }
ubl_ai_nrf1 = { path = "../../crates/ubl_ai_nrf1" }
ubl_chipstore = { path = "../../crates/ubl_chipstore" }
ubl_eventstore = { path = "../../crates/ubl_eventstore" }
ubl_receipt = { path = "../../crates/ubl_receipt" }
rb_vm = { path = "../../crates/rb_vm" }
blake3 = { workspace = true }
hex = "0.4"

prometheus = "0.14"
once_cell = "1.19"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = "0.3"
askama = "0.12"
reqwest = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tower = "0.5"
